[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Hypic"
version = "0.1.0"
description = "Post-quantum enhanced QUIC based on aioquic"
readme = "README.md"
requires-python = ">=3.9"

license = { text = "BSD-3-Clause" }
authors = [
    { name = "Amine Belkacem" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "aioquic",
    "certifi",
    "cryptography>=42.0.0",
    "pylsqpack>=0.3.3,<0.4.0",
    "pyopenssl>=24",
    "service-identity>=24.1.0",
]


[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.2.2",
    "typing_extensions; python_version < '3.10'",
]

[project.urls]
Homepage = "https://github.com/kacimo22/Hypic"
Repository = "https://github.com/kacimo22/Hypic"
